[Issue 28242] There is too much space between the "AddToCart" button and the product's description AB#27294

--- a/src/Composer/Composer.Product.UI/ProductDetail/Source/Sass/_product-details.scss
+++ b/src/Composer/Composer.Product.UI/ProductDetail/Source/Sass/_product-details.scss
@@ -9,8 +9,8 @@
 
 .product-details-media {
   position: relative;
-  height: 0;
-  padding-bottom: $product-lg-image-ratio * 100%;
+  //height: 0;
+  //padding-bottom: $product-lg-image-ratio * 100%;
   margin-bottom: round($line-height-computed / 2);
 
   i {
